fix landing page and add more details to user profiles
